welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value message
    message=litMessage()
    ^BDRBuggle:5: error: not found: value message
    if(message="A"){
       ^BDRBuggle:8: error: not found: value message
    else if(message="B"){
            ^BDRBuggle:12: error: not found: value message
    	else if(message="C"){
                ^